# |     ___|   |____ ___|    ____| |    \    PS2DEV Open Source Project.
#-----------------------------------------------------------------------
# Copyright 2001-2004, ps2dev - http://www.ps2dev.org
# Licenced under Academic Free License version 2.0
# Review ps2sdk README & LICENSE files for further details.
#
# $Id$

2005-01-05
  - pixel, fixed realloc's alignment bug.

2005-01-03
  - pixel, started a small skeleton, put a hello.irx file there.
  - pixel, fixing printf-to-puts "gcc-optimisation" issue *AGAIN*.

2005-01-02
  - herben, added volatiles counterparts to tamtypes.h

2005-01-01 Version 1.2 - new year's release.
  - pixel, put errno var into errno.h (duh)
  - pixel, changed write functions to use const buffers.

2004-12-31
  - oopo, moved toolchain.sh to a new ps2toolchain project.
  - pixel, various hacks to make g++ happy when using stl objects.

2004-12-29
  - pixel, reversed and added StopModule, UnloadModule, and SearchModuleByName
  - pixel, filling some blanks in iop's modload.h, using kernel.s stubs.
  - pixel, added strpbrk, strspn, strcspn, strcoll and strxfrm to libc.
  - pixel, guessed SearchModuleByAddress structure (huh... was easy...)

2004-12-17
  - radad, fixed libpad.h for some naming mistakes.

2004-11-22
  - stefan, complete support for C++ global constructors and deconstructors.
  - pixel, fixing libkernel/libc dependancy.
  - pixel, fixing various strncpy bugs in libkernel.

2004-11-17
  - emoon, Added stacktrace.

2004-11-06
  - myria, changed data types in tamtypes.h

2004-11-01
  - raipsu, fixed memalign.
  - blackdroid, pixel, lots of small stdio fixes and tweaks since a few days.

2004-10-29
  - pixel, rewrote realloc, and wrote a basic memory walker. Added strdup.
  - neovanglist, fixed xprintf's %p.

2004-10-26
  - neovanglist, added FIONREAD and FIONBIO to TCP/IP stack headers.

2004-10-25
  - pixel, fixed realloc, reported by raipsu.

2004-10-19
  - stefan, cleaned up ps2_sbrk().

2004-10-08